[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/fonts/supermarket.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/other/white-64x64.png" type="Texture" id=2]
[ext_resource path="res://props/animals/drop_item_popup.gd" type="Script" id=3]

[sub_resource type="CanvasItemMaterial" id=1]
light_mode = 1

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.784314 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.196078, 0.196078, 0.196078, 1 )

[sub_resource type="DynamicFont" id=4]
size = 20
extra_spacing_top = 8
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.313726, 0.313726, 0.313726, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="DynamicFont" id=6]
size = 24
extra_spacing_top = 16
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="DynamicFont" id=8]
size = 32
extra_spacing_top = 8
font_data = ExtResource( 1 )

[node name="drop_item_popup" type="Node2D"]
material = SubResource( 1 )
z_index = 20
script = ExtResource( 3 )

[node name="bg" type="Panel" parent="."]
use_parent_material = true
margin_left = 96.0
margin_top = -234.0
margin_right = 464.0
margin_bottom = 236.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="bg"]
use_parent_material = true
margin_left = 32.0
margin_top = 38.0
margin_right = 344.0
margin_bottom = 300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="bg/ScrollContainer"]
use_parent_material = true
margin_right = 304.0
margin_bottom = 80.0
custom_constants/vseparation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="itm_0" type="Panel" parent="bg/ScrollContainer/GridContainer"]
use_parent_material = true
margin_right = 304.0
margin_bottom = 80.0
rect_min_size = Vector2( 304, 80 )
custom_styles/panel = SubResource( 3 )

[node name="itm_bg" type="ColorRect" parent="bg/ScrollContainer/GridContainer/itm_0"]
use_parent_material = true
margin_left = 16.0
margin_top = 4.0
margin_right = 88.0
margin_bottom = 76.0
color = Color( 0.078125, 0.078125, 0.078125, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="itm_icon" type="TextureRect" parent="bg/ScrollContainer/GridContainer/itm_0/itm_bg"]
use_parent_material = true
margin_left = 4.0
margin_top = 4.0
margin_right = 68.0
margin_bottom = 68.0
rect_min_size = Vector2( 64, 64 )
texture = ExtResource( 2 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="itm_detail" type="RichTextLabel" parent="bg/ScrollContainer/GridContainer/itm_0"]
use_parent_material = true
margin_left = 96.0
margin_right = 304.0
margin_bottom = 80.0
custom_fonts/normal_font = SubResource( 4 )
text = "เนื้อาสิ้กฟหทกสหกไี้
asdasdsad
x1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exp_money_reward_bg" type="Panel" parent="bg"]
use_parent_material = true
margin_left = 32.0
margin_top = 312.0
margin_right = 336.0
margin_bottom = 394.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="bg/exp_money_reward_bg"]
use_parent_material = true
margin_left = 16.0
margin_right = 304.0
margin_bottom = 82.0
custom_fonts/normal_font = SubResource( 6 )
text = "้กฟหิก่ฟหากา
ฟหกิ่ิาาหฟก"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="check_mouse_panel" type="Panel" parent="bg"]
margin_right = 368.0
margin_bottom = 430.0
custom_styles/panel = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pick_button" type="Button" parent="bg"]
use_parent_material = true
margin_left = 96.0
margin_top = 410.0
margin_right = 272.0
margin_bottom = 458.0
custom_fonts/font = SubResource( 8 )
text = "เก็บ"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="bg/pick_button" to="." method="_on_pick_button_pressed"]
